rollout/matches/templates/matches-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: matches-dr
spec:
  host: matches
  subsets:
    - name: v1
      labels:
        version: v1
